--- a/.gitignore
+++ b/.gitignore
@@ -56,9 +56,8 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-# CocoaPods
+# Ruby / CocoaPods
 /ios/Pods/
+/vendor/bundle/
 
-# Environment Variables
 .env
-src/types/env.d.ts
