--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "intl": "^1.2.5",
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-mmkv-storage": "^0.7.1"
+    "react-native-mmkv-storage": "^0.7.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-snackbar": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
