--- a/ios/CatchTheClimate.xcodeproj/xcshareddata/xcschemes/CatchTheClimate.xcscheme
+++ b/ios/CatchTheClimate.xcodeproj/xcshareddata/xcschemes/CatchTheClimate.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "WeatherMan.app"
-               BlueprintName = "WeatherMan"
-               ReferencedContainer = "container:WeatherMan.xcodeproj">
+               BuildableName = "CatchTheClimate.app"
+               BlueprintName = "CatchTheClimate"
+               ReferencedContainer = "container:CatchTheClimate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "WeatherManTests.xctest"
-               BlueprintName = "WeatherManTests"
-               ReferencedContainer = "container:WeatherMan.xcodeproj">
+               BuildableName = "CatchTheClimateTests.xctest"
+               BlueprintName = "CatchTheClimateTests"
+               ReferencedContainer = "container:CatchTheClimate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "WeatherMan.app"
-            BlueprintName = "WeatherMan"
-            ReferencedContainer = "container:WeatherMan.xcodeproj">
+            BuildableName = "CatchTheClimate.app"
+            BlueprintName = "CatchTheClimate"
+            ReferencedContainer = "container:CatchTheClimate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "WeatherMan.app"
-            BlueprintName = "WeatherMan"
-            ReferencedContainer = "container:WeatherMan.xcodeproj">
+            BuildableName = "CatchTheClimate.app"
+            BlueprintName = "CatchTheClimate"
+            ReferencedContainer = "container:CatchTheClimate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
